Bug 307776 - GnuPG signature + attachment produces signed but empty mail
Summary: GnuPG signature + attachment produces signed but empty mail
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: crypto (other bugs)
Version First Reported In: 4.10.1
Platform: Ubuntu Linux
: NOR critical
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-03 15:01 UTC by m.eik michalke
Modified: 2013-03-27 19:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.eik michalke 2012-10-03 15:01:13 UTC
this happened for the first time in early september (KDE 4.9.0): i wanted to send a mail with an attachment and have both signed with my GnuPG key. the mail was signed and sent, but completely empty, both the text message and the attachment were gone.

the first time, i immediately tried to resend the mail several times, with different identities, but the body always remained empty. i finally sent it without signature and only then it was sent with text and attachment.

in the meantime this happened three times with different receivers. the most annoying thing is that you lose all of your message! it's just completely gone, because in the sent-mail the mail is empty as well.

Reproducible: Couldn't Reproduce

Steps to Reproduce:
*if* the problems occurs, it sticks with me. the only solution so far was sending unsigned mails, then. i have no clue what originally causes it, because i didn't manage to reproduce it reliably yet.
Actual Results:  
a signed but all empty mail is sent to the receiver.

Expected Results:  
a signed mail with the intended content is sent to the receiver.

it only occurs when trying to send with an attachment, text-only mails always work fine. i also have S/MIME keys configured, and so far the problem never occured with S/MIME signed mails, even if they have an attachment.

this is how all empty mails look like in my outgoing folder:

<snip>
From: "my name" <me@example.com>
To: "your name" <you@example.com>
Cc: info@example.com
Subject: Re: old subject
Date: Tue, 11 Sep 2012 13:36:52 +0200
Message-ID: <SoMe=StUfF@mymachine>
Organization: http://example.com
X-KMail-Identity: 523004225
User-Agent: KMail/4.9 (Linux/3.2.0-31-generic; KDE/4.9.0; x86_64; ; )
In-Reply-To: <SoMe=StUfF@receiver.example.com>
References: <SoMe=StUfF@receiver.example.com>
MIME-Version: 1.0
Content-Type: text/plain; charset="US-ASCII"
Content-Transfer-Encoding: 7Bit

-----BEGIN PGP SIGNED MESSAGE-----
Hash: SHA1


-----BEGIN PGP SIGNATURE-----
Version: GnuPG v1.4.11 (GNU/Linux)

iEYEAREcAaYFAlBPIpEACgkQ6Dx8/Hy2+Q8rQACgkKYws1oUsy5n1Xlgcqrk06Wf
URIAnAsHBifs5ZGRrXcAvVqdhJyB9ZvH
=0HNy
-----END PGP SIGNATURE-----
</snip>
Comment 1 Martin Walch 2013-02-20 00:07:04 UTC
This happens to me slightly different: the attachments usually arrive, but I never know for sure if the text arrives. In my sent folder everything looks always fine.
Comment 2 Sandro Knauß 2013-03-21 23:37:56 UTC
The inline encryption is broken for attachment.

Steps to reproduce:
1. write mail
2. check inline crypto 
3. check sign/encrypt
4. add attachment
5. send mail
-> mail is completly empty.

For all other crypto functions ( mime, smime, smime opaque) it is working for me.

walch.martin@web.de : can you describe it more detail, when the text is not arraving? What crypto function, text you entered ?
Comment 3 Martin Walch 2013-03-22 00:24:17 UTC
(In reply to comment #2)
> walch.martin@web.de : can you describe it more detail, when the text is not
> arraving? What crypto function, text you entered ?

Problem appears for me with OpenPGP/MIME.

I did not find any pattern regarding the text. It just happens with any text.
Comment 4 Sandro Knauß 2013-03-22 09:26:13 UTC
(In reply to comment #3)
> Problem appears for me with OpenPGP/MIME.
> I did not find any pattern regarding the text. It just happens with any text.
I can't reproduce it with OpenPGP Mime. Please attach a broken mail. Maybe I see the issue if i see the broken mail. 
Please check if you not talking about bug 289722. The issue here is: You transfer the text correctly but with the wrong Content Transfer Encoding -> if the Content Transfer Encoding doesn't match, the recipient email client shows nothing or garbage.
Comment 5 Sandro Knauß 2013-03-27 11:28:37 UTC
Git commit 85a0774dee9aa2abb034e0512315b3921cedf350 by Sandro Knauß.
Committed on 25/03/2013 at 18:37.
Pushed by knauss into branch 'KDE/4.10'.

Fix 307776 - GnuPG signature + attachment produces signed but empty mail

Creating an inline encrypted mail with attachments produces an empty
mail without any attachments.
FIXED-IN: 4.10.2
REVIEW: 109710

M  +102  -4    messagecomposer/composer.cpp

http://commits.kde.org/kdepim/85a0774dee9aa2abb034e0512315b3921cedf350
Comment 6 Martin Walch 2013-03-27 18:41:56 UTC
(In reply to comment #4)
> I can't reproduce it with OpenPGP Mime. Please attach a broken mail. Maybe I
> see the issue if i see the broken mail. 
> Please check if you not talking about bug 289722. The issue here is: You
> transfer the text correctly but with the wrong Content Transfer Encoding ->
> if the Content Transfer Encoding doesn't match, the recipient email client
> shows nothing or garbage.

I am trying to answer these questions, but this is not easy:

- the recipients did not (and to some degree could not) tell me for sure if they received actually a blank text or if it the content is garbage that is not displayed
- the content of the encrypted emails is confidential (which is why they are encrypted), and as it happens only in few cases, it is hard to produce a testcase that I can transparently disclosure
Comment 7 Sandro Knauß 2013-03-27 19:25:07 UTC
(In reply to comment #6)
> I am trying to answer these questions, but this is not easy:
> - the recipients did not (and to some degree could not) tell me for sure if
> they received actually a blank text or if it the content is garbage that is
> not displayed
> - the content of the encrypted emails is confidential (which is why they are
> encrypted), and as it happens only in few cases, it is hard to produce a
> testcase that I can transparently disclosure.
That's a pitty, that you can't create a testcase. Maybe you could tell me some souroundings:
- has the language you used special characters that aren't in 7bit like umlaute?
- Did you used newlines?
- Is the mail show corrctly showed in your send folder?
- That email client was used by the receiver?
- Can you give me a look to the encrypted mail (so the part that is actually sended over the wire)? I don't need the decrypted part.
- Can you just post the heades without the part between -----BEGIN PGP MESSAGE----- and -----END PGP MESSAGE-----?