Fix 307776 - GnuPG signature + attachment produces signed but empty mail

Creating an inline encrypted mail with attachments produces an empty
mail without any attachments.

BUG: 307776
FIXED-IN: 4.10.2
REVIEW: 109710